--- a/Shakespeare.css
+++ b/Shakespeare.css
@@ -18,7 +18,11 @@ color: black;
     font-size: 22px;
 color: black;
 }
-
+.name:hover{
+    text-shadow: 3px 3px 5px lightgreen;
+    border:salmon;
+    border-style: ridge;
+}
 .CASSIO{
 color: blue;
 }
